k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: autenticacion-ap
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: localhost:5000/auth-frontend-dev  # Revisar esto como mencioné
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Always  # Importante para desarrollo
