k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontfinca
  namespace: frontfinca-dev
spec:
  selector:
    app: frontfinca
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
